...
                            <constraint firstItem="uh3-T6-67Q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bLL-WV-nHa"/>
                            <constraint firstAttribute="bottom" secondItem="i5l-rG-21b" secondAttribute="bottom" id="fV9-Rq-G9G"/>
                            <constraint firstItem="i5l-rG-21b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hhm-So-gt5"/>
                            <constraint firstItem="i5l-rG-21b" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qFo-VN-KnL"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Notes" id="wAq-mw-eWm">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3Qn-Vx-AuT">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="addNoteButton:" destination="BYZ-38-t0r" id="9oy-NX-Jw3"/>
                            </connections>
                        </barButtonItem>
...
            <objects>
                <viewController id="H85-WL-B0g" customClass="CreateVC" customModule="to_do_app_viper" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Bt5-kH-hVI">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="748"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Note" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="2Ra-JG-Luw">
                                <rect key="frame" x="32" y="32" width="350" height="34"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Twc-g6-faC">
                                <rect key="frame" x="142.5" y="347" width="129.5" height="54.5"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Create">
                                    <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="35"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="createButton:" destination="H85-WL-B0g" eventType="touchUpInside" id="8iy-hd-XN4"/>
                                </connections>
                            </button>
...
