...
    }
    
    //Swipe
    func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        let note = notesList[indexPath.row]
        let delete = UIContextualAction(style: .destructive,
                                        title: "Delete") { contextualAction, view, bool in
            let alert = UIAlertController(title: "Delete Process",
                                          message: "Are you sure, this note will delete",
                                          preferredStyle: .alert)
            let deleteButton = UIAlertAction(title: "Delete",
                                             style: .destructive) { _ in
                self.homepagePresenter?.deleteNote(note_id: note.note_id!)
...
